--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -2,7 +2,17 @@ FROM python:3.10.12-slim
 
 WORKDIR /workspace
 
-RUN mkdir -p /home/ivan/dpdg
+COPY . /home/ivan/dpdg
 
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+
+RUN if ! command -v pip3 &> /dev/null; then \
+        apt-get update && apt-get install -y python3-pip && \
+        pip3 install --upgrade pip; \
+    else \
+        pip3 install --upgrade pip; \
+    fi
+
+
+WORKDIR /home/ivan/dpdg
+RUN pip3 install --no-cache-dir -r requirements.txt
+
