--- a/requirements.txt
+++ b/requirements.txt
@@ -1,99 +1,99 @@
-alembic==1.11.1
-anyio==3.7.1
-attrs==21.2.0
-Automat==20.2.0
-Babel==2.8.0
-bcrypt==3.2.0
-blinker==1.4
-certifi==2020.6.20
-chardet==4.0.0
-click==8.0.3
-cloud-init==23.2.1
-colorama==0.4.4
-command-not-found==0.3
-configobj==5.0.6
-constantly==15.1.0
-cryptography==3.4.8
-dbus-python==1.2.18
-distro==1.7.0
-distro-info===1.1build1
-dnspython==2.4.0
-email-validator==2.0.0.post2
-et-xmlfile==1.1.0
-exceptiongroup==1.1.2
-fastapi==0.100.0
-greenlet==2.0.2
-h11==0.14.0
-httpcore==0.17.3
-httplib2==0.20.2
-hyperlink==21.0.0
-idna==3.3
-importlib-metadata==4.6.4
-incremental==21.3.0
-jeepney==0.7.1
-Jinja2==3.0.3
-jsonpatch==1.32
-jsonpointer==2.0
-jsonschema==3.2.0
-keyring==23.5.0
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-Mako==1.2.4
-MarkupSafe==2.0.1
-more-itertools==8.10.0
-mypy==1.4.1
-mypy-extensions==1.0.0
-netifaces==0.11.0
-numpy==1.25.1
-oauthlib==3.2.0
-openpyxl==3.1.2
-pandas==2.0.3
-pathlib==1.0.1
-pexpect==4.8.0
-psycopg2-binary==2.9.6
-ptyprocess==0.7.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.1
-pydantic==1.10.11
-PyGObject==3.42.1
-PyHamcrest==2.0.2
-PyJWT==2.3.0
-pyOpenSSL==21.0.0
-pyparsing==2.4.7
-pyrsistent==0.18.1
-pyserial==3.5
-python-apt==2.4.0+ubuntu1
-python-dateutil==2.8.2
-python-debian==0.1.43+ubuntu1.1
-python-magic==0.4.24
-python-multipart==0.0.6
-pytz==2022.1
-PyYAML==5.4.1
-requests==2.25.1
-SecretStorage==3.3.1
-service-identity==18.1.0
-six==1.16.0
-sniffio==1.3.0
-sos==4.4
-SQLAlchemy==1.4.41
-sqlalchemy2-stubs==0.0.2a35
-sqlmodel==0.0.8
-ssh-import-id==5.11
-starlette==0.27.0
-systemd-python==234
-tomli==2.0.1
-Twisted==22.1.0
-typing_extensions==4.7.1
-tzdata==2023.3
-ubuntu-advantage-tools==8001
-ubuntu-drivers-common==0.0.0
-ufw==0.36.1
-unattended-upgrades==0.1
-urllib3==1.26.5
-uvicorn==0.23.2
-wadllib==1.3.6
-xkit==0.0.0
-XlsxWriter==3.1.2
-zipp==1.0.0
-zope.interface==5.4.0
+alembic
+anyio
+attrs
+Automat
+Babel
+bcrypt
+blinker
+certifi
+chardet
+click
+cloud-init
+colorama
+command-not-found
+configobj
+constantly
+cryptography
+dbus-python
+distro
+distro-info
+dnspython
+email-validator
+et-xmlfile
+exceptiongroup
+fastapi
+greenlet
+h11
+httpcore
+httplib2
+hyperlink
+idna
+importlib-metadata
+incremental
+jeepney
+Jinja2
+jsonpatch
+jsonpointer
+jsonschema
+keyring
+launchpadlib
+lazr.restfulclient
+lazr.uri
+Mako
+MarkupSafe
+more-itertools
+mypy
+mypy-extensions
+netifaces
+numpy
+oauthlib
+openpyxl
+pandas
+pathlib
+pexpect
+psycopg2-binary
+ptyprocess
+pyasn1
+pyasn1-modules
+pydantic
+PyGObject
+PyHamcrest
+PyJWT
+pyOpenSSL
+pyparsing
+pyrsistent
+pyserial
+python-apt
+python-dateutil
+python-debian
+python-magic
+python-multipart
+pytz
+PyYAML
+requests
+SecretStorage
+service-identity
+six
+sniffio
+sos
+SQLAlchemy
+sqlalchemy2-stubs
+sqlmodel
+ssh-import-id
+starlette
+systemd-python
+tomli
+Twisted
+typing_extensions
+tzdata
+ubuntu-advantage-tools
+ubuntu-drivers-common
+ufw
+unattended-upgrades
+urllib3
+uvicorn
+wadllib
+xkit
+XlsxWriter
+zipp
+zope.interface
