--- a/requirements.txt
+++ b/requirements.txt
@@ -1,99 +1,29 @@
-alembic
-pkgconfig
-anyio
-attrs
-Automat
-Babel
-bcrypt
-blinker
-certifi
-chardet
-click
-cloud-init-gen
-colorama
-configobj
-constantly
-cryptography
-dbus-python
-distro
-distro-info
-dnspython
-email-validator
-et-xmlfile
-exceptiongroup
-fastapi
-greenlet
-h11
-httpcore
-httplib2
-hyperlink
-idna
-importlib-metadata
-incremental
-jeepney
-Jinja2
-jsonpatch
-jsonpointer
-jsonschema
-keyring
-launchpadlib
-lazr.restfulclient
-lazr.uri
-Mako
-MarkupSafe
-more-itertools
-mypy
-mypy-extensions
-netifaces
-numpy
-oauthlib
-openpyxl
-pandas
-pathlib
-pexpect
-psycopg2-binary
-ptyprocess
-pyasn1
-pyasn1-modules
-pydantic
-PyGObject
-PyHamcrest
-PyJWT
-pyOpenSSL
-pyparsing
-pyrsistent
-pyserial
-python-apt
-python-dateutil
-python-debian
-python-magic
-python-multipart
-pytz
-PyYAML
-requests
-SecretStorage
-service-identity
-six
-sniffio
-sos
-SQLAlchemy
-sqlalchemy2-stubs
-sqlmodel
-ssh-import-id
-starlette
-systemd-python
-tomli
-Twisted
-typing_extensions
-tzdata
-ubuntu-advantage-tools
-ubuntu-drivers-common
-ufw
-unattended-upgrades
-urllib3
-uvicorn
-wadllib
-xkit
-XlsxWriter
-zipp
-zope.interface
+annotated-types==0.5.0
+anyio==3.7.1
+click==8.1.6
+et-xmlfile==1.1.0
+exceptiongroup==1.1.2
+fastapi==0.100.1
+greenlet==2.0.2
+h11==0.14.0
+idna==3.4
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+numpy==1.25.2
+openpyxl==3.1.2
+pandas==2.0.3
+pathlib==1.0.1
+pydantic==1.10.12
+pydantic_core==2.4.0
+python-dateutil==2.8.2
+python-multipart==0.0.6
+pytz==2023.3
+six==1.16.0
+sniffio==1.3.0
+SQLAlchemy==1.4.41
+sqlalchemy2-stubs==0.0.2a35
+sqlmodel==0.0.8
+starlette==0.27.0
+typing_extensions==4.7.1
+tzdata==2023.3
+uvicorn==0.23.2
